[Feature]Demo the first stage,含有创建账户、转账、购买、查看交易记录、查看私钥等功能
Signed-off-by: Yang Tao <yangtao@tik.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="transfer">Transfer</string>
     <string name="push">Push</string>
     <string name="get_table">Get table</string>
+    <string name="buy_table">Buy</string>
 
     <string name="nodeos_ip">nodeos host address</string>
     <string name="nodeos_port">Port</string>
